# newsroom

./: .env.example  .gitignore  README.md  pyproject.toml
data/: editorial_profile.md
entities/newsroom_pipeline/: __init__.py
newsroom/: __init__.py  cli.py  client.py  config.py  dedup.py  editorial.py  log.py  middleware.py  pipeline.py  scoring.py
newsroom/agents/: __init__.py  editor.py  scanner.py  writer.py
newsroom/models/: article.py
newsroom/tools/: __init__.py  extract.py  github_trending.py  hackernews.py  reddit.py  rss.py  web_search.py
